--- a/Apps/Calc/index.html
+++ b/Apps/Calc/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
       <div class="container">
-  <a href="<?php wd_url($wd_type, $wd_app, 'start.php', ''); ?>"><h2>Calculator</h2></a>
+  <h2>Calculator</h2>
   <div class="panel panel-primary" style="max-width:1100px; color: #000000;">
     <div class="panel-heading"><input type="text" id="display" class="form-control" placeholder="Cleared"></div>
     <div class="panel-body">
