--- a/Apps/Dev/index.html
+++ b/Apps/Dev/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML Tutorial</title>
+        <title>Dev</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="../../Plugins/bootstrap-4.1.1/dist/css/bootstrap.min.css">
     </head>
     <body>
-        <h1>This is a heading</h1>
-        <p>This is a paragraph.</p>
+      <div class="jumbotron">
+        <h1>Dev</h1>
+        <p>Lets build an app!</p>
+      </div>
+      <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+      <script src="../../Plugins/jquery-3.3.1.min.js"></script>
+      <script src="../../Plugins/bootstrap-4.1.1/dist/js/bootstrap.min.js"></script>
+      <script src="index.js"></script>
+      <script>if (window.module) module = window.module;</script>
     </body>
-</html> 
+</html>
