--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>The WebDesk for your desktop.</p>
 </div>
   <div class="container">
-    <div id="apps"></div>
+    <div id="apps" class="card-deck"></div>
   </div>
   <br><br><br>
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
