--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="Plugins/bootstrap-4.1.1/dist/css/bootstrap.min.css">
 </head>
 <body>
-  <div class="jumbotron">
+  <div class="jumbotron text-white" style="background-color: #1161D9;">
   <h1>WebDesk-top</h1>
   <p>The WebDesk for your desktop.</p>
 </div>
