--- a/Apps/Dev/index.html
+++ b/Apps/Dev/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="../../Plugins/bootstrap-4.1.1/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../style.css">
     </head>
     <body>
       <div class="jumbotron">
