--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="Plugins/bootstrap-4.1.1/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="jumbotron text-white" style="background-color: #1161D9;">
+  <div class="jumbotron">
   <h1>WebDesk-top</h1>
   <p>The WebDesk for your desktop.</p>
 </div>
