--- a/Apps/Dev/index.html
+++ b/Apps/Dev/index.html
@@ -12,6 +12,10 @@
         <h1>Dev</h1>
         <p>Lets build an app!</p>
       </div>
+      <div class="container">
+        <div id="apps" class="card-deck"></div>
+      </div>
+      <br><br><br>
       <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
       <script src="../../Plugins/jquery-3.3.1.min.js"></script>
       <script src="../../Plugins/bootstrap-4.1.1/dist/js/bootstrap.min.js"></script>
