--- a/Apps/Dev/page.html
+++ b/Apps/Dev/page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-sm">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="#" id="path">Logo</a>
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="#">Back</a>
