--- a/Apps/Dev/page.html
+++ b/Apps/Dev/page.html
@@ -4,8 +4,50 @@
   <title>Dev</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+  <script src= "./codemirror-5.39.0/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../Plugins/bootstrap-4.1.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../style.css">
+  <link rel="stylesheet" href="codemirror-5.39.0/lib/codemirror.css">
+  <link rel="stylesheet" href="codemirror-5.39.0/theme/abcdef.css">
+  <link rel="stylesheet" href="codemirror-5.39.0/addon/hint/show-hint.css">
+  <link rel="stylesheet" href="codemirror-5.39.0/addon/dialog/dialog.css">
+  <link rel="stylesheet" href="codemirror-5.39.0/addon/lint/lint.css">
+  <link rel="stylesheet" href="codemirror-5.39.0/addon/display/fullscreen.css">
+  <link rel="stylesheet" href="codemirror-5.39.0/addon/fold/foldgutter.css">
+  <script src="../../Plugins/jquery-3.3.1.min.js"></script>
+  <script src="../../Plugins/bootstrap-4.1.1/dist/js/bootstrap.min.js"></script>
+  <script src="./codemirror-5.39.0/mode/xml/xml.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/mode/php/php.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/mode/clike/clike.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/mode/javascript/javascript.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/mode/css/css.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/mode/htmlmixed/htmlmixed.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/hint/show-hint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/hint/javascript-hint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/hint/xml-hint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/hint/html-hint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/hint/css-hint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/search/search.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/search/searchcursor.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/search/jump-to-line.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/dialog/dialog.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/edit/matchbrackets.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/display/fullscreen.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/fold/xml-fold.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/edit/matchtags.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/lint/lint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/lint/css-lint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/lint/html-lint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/lint/javascript-lint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/lint/json-lint.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/fold/brace-fold.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/fold/foldcode.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/fold/comment-fold.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/fold/foldgutter.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/fold/indent-fold.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/fold/markdown-fold.js" type="text/javascript"></script>
+  <script src="./codemirror-5.39.0/addon/fold/xml-fold.js" type="text/javascript"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-sm">
@@ -27,13 +69,10 @@
     <p>Lets build an app!</p>
   </div>
   <div class="container">
-    <div id="apps" class="card-deck"></div>
+    <textarea id="con"></textarea>
   </div>
   <br><br><br>
-  <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-  <script src="../../Plugins/jquery-3.3.1.min.js"></script>
-  <script src="../../Plugins/bootstrap-4.1.1/dist/js/bootstrap.min.js"></script>
-  <script src="page.js"></script>
+<script src="page.js"></script>
   <script>if (window.module) module = window.module;</script>
 </body>
 </html>
