--- a/Apps/Dev/page.html
+++ b/Apps/Dev/page.html
@@ -51,11 +51,13 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-sm">
-    <a class="navbar-brand" href="#" id="path">Logo</a>
-    <ul class="navbar-nav">
+    <a class="navbar-brand" href="index.html">Dev</a>
+    <ul class="navbar-nav  mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Back</a>
+        <a class="nav-link" href="javascript:linkFunction()">Back</a>
       </li>
+    </ul>
+    <ul class="navbar-nav  ml-auto">
       <li class="nav-item">
         <a class="nav-link" href="#">Save</a>
       </li>
@@ -65,7 +67,7 @@
     </ul>
   </nav>
   <div class="jumbotron">
-    <h1>Dev</h1>
+    <h1 id="path">Dev</h1>
     <p>Lets build an app!</p>
   </div>
   <div class="container">
