--- a/Apps/Dev/dir.html
+++ b/Apps/Dev/dir.html
@@ -8,8 +8,24 @@
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
+  <nav class="navbar navbar-expand-sm">
+    <a class="navbar-brand" href="index.html">Dev</a>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Back</a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" id="nf" href="#">New File</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="delete" href="#">Delete</a>
+      </li>
+    </ul>
+  </nav>
   <div class="jumbotron">
-    <h1>Dev</h1>
+    <h1 id="path">Dev</h1>
     <p>Lets build an app!</p>
   </div>
   <div class="container">
