--- a/Apps/Dev/index.html
+++ b/Apps/Dev/index.html
@@ -8,6 +8,14 @@
         <link rel="stylesheet" href="../../style.css">
     </head>
     <body>
+      <nav class="navbar navbar-expand-sm">
+        <a class="navbar-brand" href="#">Dev</a>
+        <ul class="nav navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" id="nf" href="#">New-App</a>
+          </li>
+        </ul>
+      </nav>
       <div class="jumbotron">
         <h1>Dev</h1>
         <p>Lets build an app!</p>
