--- a/Apps/Dev/page.html
+++ b/Apps/Dev/page.html
@@ -54,15 +54,15 @@
     <a class="navbar-brand" href="index.html">Dev</a>
     <ul class="navbar-nav  mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="javascript:linkFunction()">Back</a>
+        <a class="nav-link" href="#" id="link">Back</a>
       </li>
     </ul>
     <ul class="navbar-nav  ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Save</a>
+        <a class="nav-link" href="#" id="save">Save</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Delete</a>
+        <a class="nav-link" href="#" id="delete">Delete</a>
       </li>
     </ul>
   </nav>
