--- a/Apps/Dev/index.html
+++ b/Apps/Dev/index.html
@@ -12,10 +12,21 @@
         <a class="navbar-brand" href="#">Dev</a>
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" id="nf" href="#">New-App</a>
+            <a class="nav-link" href="#" data-toggle="collapse" data-target="#nf">New-App</a>
           </li>
         </ul>
       </nav>
+      <div id="nf" class="collapse bg-secondary">
+        <br><br>
+        <div class="container">
+          <div class="form-group">
+            <label for="usr"><b>Name Your App:</b></label>
+            <input type="text" class="form-control" placeholder="App Name" id="napp">
+          </div>
+          <button class="btn btn-success" id="nf1">Creat</button>
+        </div>
+        <br><br>
+      </div>
       <div class="jumbotron">
         <h1>Dev</h1>
         <p>Lets build an app!</p>
