--- a/front.html
+++ b/front.html
@@ -2,6 +2,7 @@
 <html>
 <head id="wd_head"></head>
 <body>
+  <div id="wd_banner"></div>
   <div id="wd_body"></div>
   <br><br><br>
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
