--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,7 @@
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
   <script src="Plugins/jquery.min.js"></script>
   <div id="wd_foot"></div>
-  <script src="front.js"></script>
+  <script src="layout.js"></script>
   <script>if (window.module) module = window.module;</script>
 </body>
 </html>
