--- a/index.html
+++ b/index.html
@@ -10,12 +10,30 @@
 <body>
   <div class="jumbotron">
     <h1>WebDesk-top</h1>
-    <p>The WebDesk for your desktop.</p>
+    <p>The WebFra.me for your desktop.</p>
+    <p><a class="btn btn-success" href="http://webdesk.shirtntie.net" target="_blank">Visit The Market</a> <button id="wd_dir" type="button" class="btn btn-warning">Open Directory</button> <button type="button" class="btn btn-info" data-toggle="modal" data-target="#help">Need Help</button></p>
   </div>
   <div class="container">
     <div id="apps" class="card-deck"></div>
   </div>
   <br><br><br>
+  <div class="modal fade" id="help">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Need Help</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        This is the place ware your help documentaion will go.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
   <script src="Plugins/jquery.min.js"></script>
   <script src="Plugins/bootstrap/dist/js/bootstrap.min.js"></script>
