--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="jumbotron">
     <h1>WebDesk-top</h1>
-    <p>The WebFra.me for your desktop.</p>
-    <p><a class="btn btn-success" href="http://webdesk.shirtntie.net" target="_blank">Visit The Market</a> <button id="wd_dir" type="button" class="btn btn-warning">Open Directory</button> <button type="button" class="btn btn-info" data-toggle="modal" data-target="#help">Need Help</button></p>
+    <p>The <a href="http://webfra.me" style="color: #ffffff;" target="_blank"><u>WebFra.me</u></a> for your desktop.</p>
+    <p><a class="btn btn-success" href="http://market.webfra.me/index.php?page=webdesk-top.php" target="_blank">Visit The Market</a> <button id="wd_dir" type="button" class="btn btn-warning">Open Directory</button> <button type="button" class="btn btn-info" data-toggle="modal" data-target="#help">Need Help</button></p>
   </div>
   <div class="container">
     <div id="apps"></div>
